--- a/kp332534/CMakeLists.txt
+++ b/kp332534/CMakeLists.txt
@@ -1,45 +1,62 @@
 cmake_minimum_required (VERSION 2.8)
 project(kp332534pwir)
 
-
-set (MPI_CXX_COMPILER /opt/mpich2/bin/mpicxx)
-set (MPI_C_COMPIER /opt/mpich2/bin/mpicc)
-set (MPI_C_LIBRARIES /opt/mpich2)
-set (MPI_C_INCLUDE_PATH /opt/mpich2/include)
-find_package(MPI REQUIRED)
+set (EXECUTABLE_OUTPUT_PATH ".")
 
 include_directories (${MPI_C_INCLUDE_PATH}
-        ${Boost_INCLUDE_PATH}
         SYSTEM)
 
+set (Boost_LIBRARY_DIR /tmp/boost16/lib/)
+set (Boost_INCLUDE_DIR /tmp/boost16/include/)
+find_package(Boost COMPONENTS mpi serialization REQUIRED)
+include_directories(${BOOST_INCLUDE_DIR})
+link_directories(${BOOST_LIBRARY_DIR})
 
+set (COMPILE_FLAGS "-Wall -Wextra -pedantic -std=gnu++11 -O0 -ggdb3 -DDBG -Wno-unused-but-set-variable")
 
-set (EXECUTABLE_OUTPUT_PATH ".")
-find_package (Boost REQUIRED serialization)
+set (zagraniczne_src
+        prettyprint.hpp
+        densematgen.hpp densematgen.cpp
+        Debug.hpp
+        Misc.hpp Misc.cpp
+        Utils.hpp
+        )
 
-set (COMPILE_FLAGS "-Wall -Wextra -pedantic -std=gnu++11 -O0 -ggdb3 -DDEBUG -Wno-unused-but-set-variable")
-
-
-set (moje
+set (macierze_src
         Matrix.cpp Matrix.hpp
         SparseMatrix.cpp SparseMatrix.hpp
-        Utils.hpp prettyprint.hpp
         DenseMatrix.cpp DenseMatrix.hpp
-        Debug.hpp
-        densematgen.hpp densematgen.cpp)
-add_library (moje_biblioteki STATIC ${moje})
+        )
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}")
+add_library(zagraniczne ${zagraniczne_src})
+add_library(macierze ${macierze_src})
+set (moje_src
+        impl.cpp impl.hpp
+        )
+
+add_library (moje_biblioteki STATIC ${moje_src})
+
+set (CMAKE_CXX_FLAGS "-I/tmp/boost16/include ${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}")
 # set (CMAKE_LINK_LIBRARY_FLAG "${CMAKE_LINK_LIBRARY_FLAG}")
 
-add_executable(matrixmul matrixmul.cpp)
-add_executable(testowanie test.cpp)
+add_executable(matrixmul matrixmul.cpp ${moje_src})
+#add_executable(testowanie test.cpp ${moje_src})
 target_link_libraries(matrixmul
+        zagraniczne
+        macierze
         moje_biblioteki
-        /opt/mpich2/lib/libmpich.so
-        ${Boost_LIBRARIES})
+        zagraniczne
+        ${Boost_LIBRARIES}
+        ${MPI_LIBRARIES}
+        mpich
+        )
 
-target_link_libraries(testowanie
-        moje_biblioteki
-        /opt/mpich2/lib/libmpich.so
-        ${Boost_LIBRARIES})
+#target_link_libraries(testowanie
+#        zagraniczne
+#        macierze
+#        moje_biblioteki
+#        zagraniczne
+#        ${Boost_LIBRARIES}
+#        ${MPI_LIBRARIES}
+#        mpich
+#        )
